# cookiecutter-poetry-pypackagexcvbxcbx

{{cookiecutter.project_slug}}/: pyproject.toml
